--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
     <link href="css/styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="container clearfix">
         <nav class="header-top clearfix">
-          <a class="logo" href="#">
+          <a class="logo">
             <img src="img/header-logo.png" width="160" height="65" alt="Логотип">
           </a>
           <nav class="main-nav">
@@ -27,7 +28,7 @@
 
         <section class="promo">
           <div class="left">
-            <p class="lead">
+            <p class="slogan">
               <b>
                 Долго, дорого,
                 скрупулезно.
@@ -93,7 +94,7 @@
 
         <section class="about clearfix">
           <div class="left">
-            <p class="lead">
+            <p class="slogan">
               <b>
                 Мы - маленькая, но гордая
                 дизайн-студия из Краснодара.
