Подправил отступы и сетку

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
     <header class="main-header">
       <div class="container">
         <nav class="header-top clearfix">
-          <a class="logo" href="#">
+          <a class="logo" href="index.html">
             <img src="img/header-logo.png" width="160" height="65" alt="Логотип">
           </a>
           <ul class="main-nav">
@@ -27,7 +27,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="catalog-container">
       <div class="container clearfix">
         <aside class="characteristics">
           <form action="#" method="get">
