--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
         </nav>
 
-        <section class="promo">
+        <section class="promo clearfix">
           <div class="left">
             <p class="slogan">
               <b>
