--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
           </a>
           <nav class="main-nav">
             <ul>
-              <li><a href="index.html">Студия</a></li>
+              <li><a href="#">Студия</a></li>
               <li><a href="#">Клиенты</a></li>
               <li><a class="active">Магазин</a></li>
               <li><a href="#">Контакты</a></li>
@@ -39,8 +39,11 @@
             <fieldset class="cost">
               <legend class="title">Стоимость:</legend>
               <div class="slider">
-								<span class="mark"><span class="point"></span></span>
-                <span class="mark"><span class="point"></span></span>
+              	<div class="main-line">
+              		<div class="current-line"></div>
+              	</div>
+								<span class="mark start-mark"></span>
+                <span class="mark finish-mark"></span>
               </div>
 							<label for="start-value">от</label>
 							<input id="start-value" type="text" name="start-value" value="0" readonly>
@@ -118,11 +121,6 @@
           </div>
 
           <article class="catalog-item">
-           	<div class="top-line">
-           		<span class="line-mark"></span>
-           		<span class="line-mark"></span>
-           		<span class="line-mark"></span>
-           	</div>
             <figure class="pic">
               <img src="img/img-sedona.jpg" width="360" height="576" alt="Макет Sedona">
             </figure>
@@ -137,11 +135,6 @@
           </article>
 
           <article class="catalog-item">
-           <div class="top-line">
-           		<span class="line-mark"></span>
-           		<span class="line-mark"></span>
-           		<span class="line-mark"></span>
-           	</div>
             <figure class="pic">
               <img src="img/img-pink.jpg" width="360" height="576" alt="Макет Pink">
             </figure>
@@ -156,11 +149,6 @@
           </article>
 
           <article class="catalog-item">
-           <div class="top-line">
-           		<span class="line-mark"></span>
-           		<span class="line-mark"></span>
-           		<span class="line-mark"></span>
-           	</div>
             <figure class="pic">
               <img src="img/img-barbershop.jpg" width="360" height="576" alt="Макет Barbershop">
             </figure>
@@ -175,11 +163,6 @@
           </article>
 
           <article class="catalog-item">
-           <div class="top-line">
-           		<span class="line-mark"></span>
-           		<span class="line-mark"></span>
-           		<span class="line-mark"></span>
-           	</div>
             <figure class="pic">
               <img src="img/img-mishka.jpg" width="360" height="576" alt="Макет Mishka">
             </figure>
@@ -194,11 +177,6 @@
           </article>
 
           <article class="catalog-item">
-           <div class="top-line">
-           		<span class="line-mark"></span>
-           		<span class="line-mark"></span>
-           		<span class="line-mark"></span>
-           	</div>
             <figure class="pic">
               <img src="img/img-aplus.jpg" width="360" height="576" alt="Макет A+">
             </figure>
@@ -213,11 +191,6 @@
           </article>
 
           <article class="catalog-item">
-           <div class="top-line">
-           		<span class="line-mark"></span>
-           		<span class="line-mark"></span>
-           		<span class="line-mark"></span>
-           	</div>
             <figure class="pic">
               <img src="img/img-kvast.jpg" width="360" height="576" alt="Макет Кваст">
             </figure>
