--- a/index.html
+++ b/index.html
@@ -197,5 +197,17 @@
         </div>
       </section>
     </footer>
+    
+    <section class="contact-block" hidden>
+    	<h2 class="title">Напишите нам</h2>
+    	<form class="contact-form" action="#" method="post">
+    		<label for="user-name">Ваше имя:</label>
+    		<input id="user-name" type="text" name="user-name" placeholder="Представьтесь, пожалуйста">
+    		<label for="user-email">Ваш e-mail:</label>
+    		<input id="user-email" type="text" name="user-email" placeholder="Для отправки ответа">
+    		<label for="user-letter">Текст письма:</label>
+    		<textarea id="user-letter" name="user-letter" cols="30" rows="10" placeholder="В свободной форме"></textarea>
+    	</form>
+    </section>
   </body>
 </html>
