--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
     <section class="contact-block" hidden>
     	<h2 class="title">Напишите нам</h2>
     	<form class="contact-form clearfix" action="#" method="post">
+    		<button class="cross"></button>
     		<div class="form-left">
 					<label for="user-name">Ваше имя:</label>
 					<input id="user-name" type="text" name="user-name" placeholder="Представьтесь, пожалуйста">
