--- a/catalog.html
+++ b/catalog.html
@@ -240,7 +240,7 @@
       </section>
     </footer>
     
-    <section class="contact-block">
+    <section class="contact-block" hidden>
     	<h2 class="title">Напишите нам</h2>
     	<form class="contact-form clearfix" action="#" method="post">
     		<div class="form-left">
